gift slider overflow fix

--- a/src/components/giftSlider/giftSlider.scss
+++ b/src/components/giftSlider/giftSlider.scss
@@ -5,7 +5,6 @@
   .slick-list {
     width: 100%;
     position: relative;
-    overflow: hidden;
     &:after {
       content: '';
       display: block;
